# SDL-Game-Engine

./: CMakeLists.txt  Game.cpp  Game.h  TextureManager.cpp  main.cpp
asset/: map.tmx  map2.tmx
asset/animations/: chick_animations.xml
src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  KeyboardInputSystem.h  Movement.h  MovementSystem.h  Render.h  RenderSystem.h  SpawnTimerSystem.h
src/manager/: Scene.cpp  Scene.h  SceneManager.h  TextureManager.h
src/utils/: Collision.cpp  Collision.h  Vector2D.cpp  Vector2D.h
